--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/NewCA1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.34-bin.jar=C:\\Users\\futur\\Documents\\NetBeansProjects\\OnlineShop\\build\\web\\WEB-INF\\lib\\mysql-connector-java-5.1.34-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.34-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ProjectFrame
+main.class=LoginFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
